--- a/LGEGX.html
+++ b/LGEGX.html
@@ -10,7 +10,7 @@ body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
   background-image: url('https://www.plantemoran.com/-/media/images/insights-images/2018/04/thinking-about-becoming-a-smart-city.jpg?h=704&w=1100&la=en&hash=0F4F54BBECD3E501765A064202A24F8851D74E04');
-  min-height: 100%;
+  height: 1000px;
   background-position: center;
   background-size: cover;
 }
