--- a/LGEGX.html
+++ b/LGEGX.html
@@ -140,16 +140,17 @@ nav > ul > li > a {
 </style>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge" style="color:white;">
+<div class="bgimg">
+  <div class="w3-display-topleft" style="color:white;">
     LGEG
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top" style="color:white;">Lean Startup</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">or how to test hypotheses around your business idea</p>
+    <h1  style="color:white;">Lean Startup</h1>
+    <hr  style="margin:auto;width:40%">
+    <p >or how to test hypotheses around your business idea</p>
   </div>
 </div>
+  
   
   <!-- <div class="circle"> </div> -->
    
